# surogates

./: .dockerignore  .gitignore  .npmrc  DESKTOP.md  README.md  config.yaml.example  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: release.yml  update-images.yml
demo-cluster/surogates/: namespace.yaml  secrets.yaml
dev-cluster/: setup-cluster.sh
dev-cluster/db/: values.yml
dev-cluster/redis/: values.yml
dev-cluster/surogates/: values.yml
docs/: experts-quickstart.md  index.md  launch.json  mcp-proxy-quickstart.md  slack-quickstart.md
docs/agent-inbox/: index.md
docs/appendices/: api-reference.md  configuration.md  glossary.md
docs/architecture/: compression-characterization.md  index.md
docs/audit/: audit_log.md  events.md  index.md  views.md
docs/background-jobs/: index.md
docs/board/: index.md
docs/browser-use/: index.md
docs/channels/: api.md  index.md  slack.md  telegram.md  web.md  website.md
docs/commands/: index.md
docs/deep-research/: index.md
docs/deployment/: index.md
docs/experts/: index.md
docs/getting-started/: index.md
docs/goals/: index.md
docs/governance-and-security/: index.md
docs/intro/: index.md
docs/mcp-integration/: index.md  proxy.md
docs/memory/: index.md
docs/multi-tenancy/: index.md
docs/operations/: index.md
docs/plans/: 2026-06-02-deep-research-webweaver.md
docs/research-missions/: index.md
docs/skills/: index.md
docs/storage/: index.md
docs/sub-agents/: 2026-05-16-subagent-task-layer-v1-plan.md  2026-05-16-subagent-task-layer-v1.md  index.md
docs/tasks/: index.md
docs/tools/: index.md
helm/surogates/: Chart.yaml  values.yaml
howto/: experts-quickstart.md
images/: build.sh
images/api/: Dockerfile
images/browser/: Dockerfile  test_live_view_rfb.py
images/s3fs/: Dockerfile  build.sh  entrypoint.sh
images/sandbox/: Dockerfile  entrypoint.sh  pip-wrapper  tool-executor
images/worker/: Dockerfile
k8/base/: api-deployment.yaml  channel-slack-deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  mcp-proxy-deployment.yaml  sandbox-networkpolicy.yaml  sandbox-rbac.yaml  worker-deployment.yaml  worker-rbac.yaml
k8s/: cluster.yml  setup-cluster.sh
k8s/camofox-browser/: README.md  deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
k8s/garage/: nodeport.yaml  values.yml
k8s/surogates/: configmaps.yaml  ingress.yaml
scripts/: api_dockerfile_test.rb  bootstrap_dev.py  chat-route-state.test.mjs  inspect_compression.py  publish-sdk-packages.mjs  publish-sdk-packages.test.mjs  release-notes.mjs  release-notes.test.mjs  release_workflow_test.rb  test_prefix_cache.py  web-shared-chat-sdk.test.mjs
scripts/k8s/: sandbox-executor-networkpolicy.yaml
sdk/agent-chat-react/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.setup.ts
sdk/example-chat-app/: .env.example  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
sdk/website-widget/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
skills/heavyskill/: heavyskill.md
skills/productivity/: DESCRIPTION.md
skills/research/: DESCRIPTION.md
surogates/: config.py  logging_config.py  trace.py
surogates.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
surogates/ambient/: decision.py  materialize.py  prompt.py  rate_limiter.py  reconcile.py  store.py  tasks_probe.py  ticker.py
surogates/api/: app.py  frontend.py  session_guards.py
surogates/arbor/: __init__.py  convergence.py  evaluator_policy.py  models.py  prompts.py  propagate.py  store.py
surogates/artifacts/: __init__.py  models.py  store.py
surogates/audit/: __init__.py  events.py  request_meta.py  store.py  types.py
surogates/board/: __init__.py  groups.py  render.py  store.py  tools.py  types.py  verifier.py
surogates/browser/: __init__.py  base.py  client.py  composite.py  control.py  fleet.py  kubernetes.py  pool.py  process.py  profiles.py  registry.py  resolver.py  rfb.py
surogates/channels/: __init__.py  base.py  channel_backfill.py  channel_catchup.py  channel_follow.py  channel_media.py  channel_observations.py  channel_progress.py  channel_state.py  credentials.py  dedup.py  delivery.py  dispatcher.py  errors.py  file_fetch.py  identity.py  inbound.py  media.py  memory_boundary.py  pairing.py  platform_resolve.py  rate_gate.py  registry.py  resolve.py  runner.py  slack.py  slack_format.py  slack_state.py  source.py  teams.py  telegram.py  telegram_format.py  telegram_network.py  token_resolver.py  web.py  webhook.py  website_agent_store.py  website_keys.py  website_origin.py  website_session.py
surogates/cli/: main.py
surogates/coding_agents/: __init__.py  agents.py  command.py  credentials.py  crew_seed.py  (+4 more)
tests/: conftest.py  test_acting_principal.py  test_agent_principal_resolver_wiring.py  test_agent_resolver.py  test_agent_type_spawn.py  test_ambient_decision.py  test_ambient_delivery_skip.py  test_ambient_ensure.py  test_ambient_materialize.py  test_ambient_prompt.py  test_ambient_rate_limiter.py  test_ambient_store.py  test_ambient_tasks_probe.py  test_ambient_ticker.py  test_api_browser_bootstrap.py  test_api_client_channel_file.py  test_arbor_convergence.py  test_arbor_evaluator_policy.py  test_arbor_harvest.py  test_arbor_parse.py  test_arbor_propagate.py  test_arbor_report.py  test_arbor_routing.py  test_arbor_synthesis.py  test_arbor_tool_filter.py  test_artifacts.py  test_ask_user_question.py  test_attachment_ingest.py  test_audit_copilot_action.py  test_auth_query_token.py  test_autothink_and_self_discover.py  test_auxiliary_client.py  test_board_render.py  test_board_replay_hydration.py  test_board_settings.py  test_board_tool_gating.py  test_board_verifier.py  test_browser_base.py  test_browser_client.py  test_browser_client_storage_state.py  (+278 more)
web/: .gitignore  components.json  eslint.config.js  index.html  package-lock.json  package.json  test-events.ts  tsconfig.app.json  vite.config.ts
(+1105 files in other folders)
