[project]
name = "surogates"
dynamic = ["version"]
description = "Open Managed Agents"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
maintainers = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
urls = { "Homepage" = "https://surogate.ai", "Repository" = "https://github.com/invergent-ai/surogates", "Issues" = "https://github.com/invergent-ai/surogates/issues" }
keywords = ["machine learning", "large language model"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "pydantic>=2.4,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "pgvector>=0.3,<1.0",
    "httpx>=0.27,<1.0",
    "redis[hiredis]>=5.0,<6.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sse-starlette>=1.6,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "cryptography>=42.0,<45.0",
    "email-validator>=2.0,<3.0",
    "openai>=1.30,<2.0",
    "pyyaml>=6.0,<7.0",
    "python-multipart>=0.0.7,<1.0",
    "agent-os-kernel>=3.0,<4.0",
    "aioboto3>=14.0",
    "kubernetes-asyncio>=31.0,<32.0",
    "slack-bolt>=1.20,<2.0",
    "python-telegram-bot>=21.0,<22.0",
]
scripts = { "surogates" = "surogates.cli.main:cli_main" }

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["surogates*"]

[tool.setuptools.package-data]
# Bundle the built web SPA so the API image can serve it from the
# installed package location (site-packages/surogates/web/dist).
# Prompt fragments (markdown + YAML frontmatter) are read from the
# installed package path by surogates.harness.prompt_library.
surogates = ["web/dist/**/*", "harness/prompts/**/*.md"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.uv]
prerelease = "allow"
cache-keys = [
    { file = "pyproject.toml" },
    { file = "surogate/**/*.py" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0a0",
    "testcontainers[postgres,redis]>=4.0,<5.0",
    "httpx>=0.27,<1.0",
    "moto[s3]>=5.0,<6.0",
]
